--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: c
 
 script:
-  - make && make run_geometry
+  - make && make run_geometry && make run_testing 
   - git ls-files src/ | xargs clang-format -i && git diff --exit-code
+  - git ls-files test/ | xargs clang-format -i && git diff --exit-code
   
 
 compiler: gcc
